--- a/css/styles.css
+++ b/css/styles.css
@@ -372,3 +372,57 @@ body {
   font-size: 14px; }
   .form-file-error.visible {
     display: block; }
+
+.confirmation-modal-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+  z-index: -1000;
+  background-color: rgba(0, 168, 144, 0.2); }
+  .confirmation-modal-container.visible {
+    z-index: 1000;
+    visibility: visible; }
+    .confirmation-modal-container.visible .confirmation-modal {
+      transform: translate(-50%, -50%) scale(1); }
+  .confirmation-modal-container .confirmation-modal {
+    width: 300px;
+    max-width: 90vw;
+    max-height: 90vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 15px;
+    background-color: #fff;
+    border-radius: 4px;
+    transform: translate(-50%, -50%) scale(0);
+    transition: .3s; }
+    .confirmation-modal-container .confirmation-modal .confirmation-modal-title {
+      font-size: 16px;
+      margin-bottom: 15px; }
+    .confirmation-modal-container .confirmation-modal .confirmation-modal-text {
+      font-size: 14px;
+      line-height: 22px; }
+    .confirmation-modal-container .confirmation-modal .confirmation-modal-actions {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      padding-top: 15px; }
+      .confirmation-modal-container .confirmation-modal .confirmation-modal-actions .confirmation-modal-button {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 120px;
+        height: 36px;
+        padding: 6px 15px;
+        border: 1px solid rgba(0, 0, 0, 0.12);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.14), 0 0 0 0 rgba(0, 0, 0, 0.12);
+        border-radius: 3px;
+        background-color: transparent;
+        outline: none;
+        cursor: pointer;
+        transition: .2s; }
+        .confirmation-modal-container .confirmation-modal .confirmation-modal-actions .confirmation-modal-button:hover {
+          background-color: rgba(0, 0, 0, 0.04); }
